[gd_scene load_steps=15 format=3 uid="uid://w5ql2hdn2oqa"]

[ext_resource type="Script" uid="uid://drkqmfr2osb2a" path="res://scripts/laser_cannon.gd" id="1_kh51s"]
[ext_resource type="Texture2D" uid="uid://ck8cgrap3osmc" path="res://assets/laser_cannon-Sheet.png" id="3_eatja"]
[ext_resource type="Texture2D" uid="uid://1kam4ssbe0ew" path="res://assets/Laser_Center.png" id="3_g8jmr"]
[ext_resource type="AudioStream" uid="uid://dfqtungyav0fo" path="res://sounds/laserbeam.wav" id="4_kh51s"]
[ext_resource type="Script" uid="uid://cf86idyf4t4np" path="res://scripts/hit_box_component.gd" id="5_f5hhh"]
[ext_resource type="Script" uid="uid://b10ieu4wrw3qq" path="res://scripts/health_component.gd" id="6_fpdxq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fpdxq"]
atlas = ExtResource("3_eatja")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovg73"]
atlas = ExtResource("3_eatja")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6qxx"]
atlas = ExtResource("3_eatja")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0rbm"]
atlas = ExtResource("3_eatja")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgil0"]
atlas = ExtResource("3_eatja")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6pvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpdxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovg73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6qxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0rbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgil0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g8jmr"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 70.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ovg73"]
radius = 20.2237

[node name="LaserCannon" type="Node2D"]
script = ExtResource("1_kh51s")
damage = 20

[node name="LaserCannonSpr" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_c6pvo")
autoplay = "default"
frame_progress = 0.232682

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(-500, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="LaserCenter" type="Sprite2D" parent="RayCast2D"]
modulate = Color(1.5, 0.027, 0.227, 1)
rotation = 3.14159
scale = Vector2(20, 20)
texture = ExtResource("3_g8jmr")
offset = Vector2(0.5, 0)

[node name="GPUParticles2D" type="GPUParticles2D" parent="RayCast2D"]
modulate = Color(6, 1, 1, 1)
lifetime = 0.15
process_material = SubResource("ParticleProcessMaterial_g8jmr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kh51s")

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("5_f5hhh")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cf86idyf4t4np"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(12, 1)
shape = SubResource("CircleShape2D_ovg73")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("6_fpdxq")
metadata/_custom_type_script = "uid://b10ieu4wrw3qq"
